Refactor modules for final parameters and type safety
Updated module classes to use 'final' for method parameters and local variables where appropriate, improving code readability and type safety. Replaced some instanceof checks with pattern matching, used Objects.requireNonNull for attribute access, and modernized collection usage. Minor logic improvements and bug fixes were also applied, such as correcting clamp logic and recipe checks.